--- a/rootdir/init.qcom.rc
+++ b/rootdir/init.qcom.rc
@@ -273,7 +273,7 @@ on boot
     chmod 0660 /dev/ttyHS2
     chown bluetooth bluetooth /dev/ttyHS2
 
-	# IMEI
+    # IMEI
     mkdir /efs/imei 0775 radio radio
 
     # for BT MAC address
@@ -720,18 +720,6 @@ service port-bridge /system/bin/port-bridge /dev/smd0 /dev/ttyGS0
 #    socket pps stream 0660 system system
 #    group system graphics
 
-service ptt_ffbm /system/bin/ptt_socket_app -f -d
-    user root
-    group root
-    disabled
-    oneshot
-
-service ptt_socket_app /system/bin/ptt_socket_app -d
-    class main
-    user root
-    group root
-    oneshot
-
 service qcamerasvr /system/bin/mm-qcamera-daemon
     class late_start
     user camera
@@ -933,11 +921,10 @@ on charger
     write /sys/devices/system/cpu/cpu2/cpufreq/scaling_governor "powersave"
     write /sys/devices/system/cpu/cpu3/cpufreq/scaling_governor "powersave"
 
+# CM Performance profiles
 on property:sys.boot_completed=1
     write /sys/block/mmcblk0/queue/scheduler row
-
-    # Configure CPU
-    write /sys/module/lpm_levels/enable_low_power/l2 2
+    write /sys/module/lpm_levels/enable_low_power/l2 4
     write /sys/devices/system/cpu/cpu1/online 1
     write /sys/devices/system/cpu/cpu2/online 1
     write /sys/devices/system/cpu/cpu3/online 1
@@ -954,8 +941,15 @@ on property:sys.boot_completed=1
     write /sys/module/msm_pm/modes/cpu2/standalone_power_collapse/idle_enabled 1
     write /sys/module/msm_pm/modes/cpu3/standalone_power_collapse/idle_enabled 1
     write /sys/module/msm_pm/modes/cpu0/power_collapse/idle_enabled 1
-	write /sys/devices/system/cpu/cpu0/cpufreq/scaling_min_freq 300000
-	write /sys/module/msm_thermal/core_control/enabled 1
+    write /sys/devices/system/cpu/cpu0/cpufreq/scaling_governor "interactive"
+    write /sys/devices/system/cpu/cpu1/cpufreq/scaling_governor "interactive"
+    write /sys/devices/system/cpu/cpu2/cpufreq/scaling_governor "interactive"
+    write /sys/devices/system/cpu/cpu3/cpufreq/scaling_governor "interactive"
+    write /sys/devices/system/cpu/cpu0/cpufreq/scaling_min_freq 300000
+    write /sys/devices/system/cpu/cpu1/cpufreq/scaling_min_freq 300000
+    write /sys/devices/system/cpu/cpu2/cpufreq/scaling_min_freq 300000
+    write /sys/devices/system/cpu/cpu3/cpufreq/scaling_min_freq 300000
+    write /sys/module/msm_thermal/core_control/enabled 1
     chown root system /sys/devices/system/cpu/cpu1/online
     chown root system /sys/devices/system/cpu/cpu2/online
     chown root system /sys/devices/system/cpu/cpu3/online
@@ -969,36 +963,35 @@ on property:sys.boot_completed=1
     write /sys/devices/system/cpu/cpufreq/ondemand/io_is_busy 1
     write /sys/devices/system/cpu/cpufreq/ondemand/sampling_down_factor 2
     write /sys/devices/system/cpu/cpufreq/ondemand/down_differential 10
-	write /sys/devices/system/cpu/cpufreq/ondemand/up_threshold_multi_core 70
-	write /sys/devices/system/cpu/cpufreq/ondemand/down_differential_multi_core 10
-	write /sys/devices/system/cpu/cpufreq/ondemand/optimal_freq 300000
-	write /sys/devices/system/cpu/cpufreq/ondemand/sync_freq 300000
-	write /sys/devices/system/cpu/cpufreq/ondemand/up_threshold_any_cpu_load 80
-	write /sys/devices/system/cpu/cpufreq/ondemand/freq_step 20
-	write /sys/devices/system/cpu/cpufreq/ondemand/sampling_early_factor 1
-	write /sys/devices/system/cpu/cpufreq/ondemand/sampling_interim_factor 1
-	chmod 664 /sys/devices/system/cpu/cpufreq/ondemand/up_threshold
-	chmod 664 /sys/devices/system/cpu/cpufreq/ondemand/up_threshold_multi_core
-	chmod 664 /sys/devices/system/cpu/cpufreq/ondemand/up_threshold_any_cpu_load
-	chmod 664 /sys/devices/system/cpu/cpufreq/ondemand/sync_freq
-	chmod 664 /sys/devices/system/cpu/cpufreq/ondemand/freq_step
-	chmod 664 /sys/devices/system/cpu/cpufreq/ondemand/sampling_early_factor
-	chmod 664 /sys/devices/system/cpu/cpufreq/ondemand/sampling_interim_factor
-	chmod 664 /sys/devices/system/cpu/cpufreq/ondemand/step_up_early_hispeed
-	chmod 664 /sys/devices/system/cpu/cpufreq/ondemand/step_up_interim_hispeed
-	chown radio system /sys/devices/system/cpu/cpufreq/ondemand/freq_step
-	chown radio system /sys/devices/system/cpu/cpufreq/ondemand/sampling_early_factor
-	chown radio system /sys/devices/system/cpu/cpufreq/ondemand/sampling_interim_factor
-	chown radio system /sys/devices/system/cpu/cpufreq/ondemand/step_up_early_hispeed
-	chown radio system /sys/devices/system/cpu/cpufreq/ondemand/step_up_interim_hispeed
-	chown system system /sys/devices/system/cpu/cpufreq/ondemand/sampling_rate
-	chown system system /sys/devices/system/cpu/cpufreq/ondemand/sampling_down_factor
-	chown system system /sys/devices/system/cpu/cpufreq/ondemand/io_is_busy
+    write /sys/devices/system/cpu/cpufreq/ondemand/up_threshold_multi_core 70
+    write /sys/devices/system/cpu/cpufreq/ondemand/down_differential_multi_core 10
+    write /sys/devices/system/cpu/cpufreq/ondemand/optimal_freq 300000
+    write /sys/devices/system/cpu/cpufreq/ondemand/sync_freq 300000
+    write /sys/devices/system/cpu/cpufreq/ondemand/up_threshold_any_cpu_load 80
+    write /sys/devices/system/cpu/cpufreq/ondemand/freq_step 20
+    write /sys/devices/system/cpu/cpufreq/ondemand/sampling_early_factor 1
+    write /sys/devices/system/cpu/cpufreq/ondemand/sampling_interim_factor 1
+    chmod 664 /sys/devices/system/cpu/cpufreq/ondemand/up_threshold
+    chmod 664 /sys/devices/system/cpu/cpufreq/ondemand/up_threshold_multi_core
+    chmod 664 /sys/devices/system/cpu/cpufreq/ondemand/up_threshold_any_cpu_load
+    chmod 664 /sys/devices/system/cpu/cpufreq/ondemand/sync_freq
+    chmod 664 /sys/devices/system/cpu/cpufreq/ondemand/freq_step
+    chmod 664 /sys/devices/system/cpu/cpufreq/ondemand/sampling_early_factor
+    chmod 664 /sys/devices/system/cpu/cpufreq/ondemand/sampling_interim_factor
+    chmod 664 /sys/devices/system/cpu/cpufreq/ondemand/step_up_early_hispeed
+    chmod 664 /sys/devices/system/cpu/cpufreq/ondemand/step_up_interim_hispeed
+    chown radio system /sys/devices/system/cpu/cpufreq/ondemand/freq_step
+    chown radio system /sys/devices/system/cpu/cpufreq/ondemand/sampling_early_factor
+    chown radio system /sys/devices/system/cpu/cpufreq/ondemand/sampling_interim_factor
+    chown radio system /sys/devices/system/cpu/cpufreq/ondemand/step_up_early_hispeed
+    chown radio system /sys/devices/system/cpu/cpufreq/ondemand/step_up_interim_hispeed
+    chown system system /sys/devices/system/cpu/cpufreq/ondemand/sampling_rate
+    chown system system /sys/devices/system/cpu/cpufreq/ondemand/sampling_down_factor
+    chown system system /sys/devices/system/cpu/cpufreq/ondemand/io_is_busy
 
-   # Post boot services
+    # Post boot services
     start mpdecision
 
-# CM Performance profiles
 # Powersave
 on property:sys.perf.profile=0
     start mpdecision
